--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "express-promise-router": "^2.0.0",
     "formidable": "^1.1.1",
+    "moment": "^2.20.1",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.1",
