--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.1",
+    "qiniu": "^7.1.2",
     "shortid": "^2.2.8"
   }
 }
